# ztfnuclear

./: LICENSE  README.md  agn_baseline.py  ampel_export.sh  analyze_classifier_performance.py  analyze_final_tde_candidates.py  config.yaml  export.py  export_tdes.py  find_agn.py  find_empty.py  fit.py  get_dist.py  get_flaring.py  get_peak_mag_dates.py  get_peakmag.py  get_sgscore.py  import.py  ingest.py  plot.py  plot_efficiency.py  pyproject.toml  thesis_appendix_tables.py  train.py  wsgi.py
ztfnuclear/: ampel_api.py  baseline.py  crossmatch.py  database.py  forms.py  fritz.py  io.py  plot.py  sample.py  tde_fit.py  train.py  utils.py  viewer.py  wise.py  ztfnuclear.py
ztfnuclear/templates/: bad_query.html  base.html  home.html  login.html  navbar.html  register.html  transient.html  transient_list.html
