[tool.poetry]
name = "ztfnuclear"
version = "0.1.0"
description = "Analyzing the Zwicky Transient Facility forced photometry nuclear transient sample"
authors = ["simeonreusch <simeon.reusch@desy.de>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.3"
numpy = "^1.23.2"
tqdm = "^4.64.0"
astropy = "^5.1"
planobs = "^0.5.1"
scipy = "^1.9.0"
backoff = "^2.1.2"
requests = "^2.28.1"
pymongo = "^4.2.0"
matplotlib = "^3.5.3"
pyarrow = "^9.0.0"
fastparquet = "^0.8.1"
extcats = "^2.4.3"
timewise = "^0.1.10"
Flask = "^2.2.2"
Flask-Login = "^0.6.2"
Flask-WTF = "^1.0.1"
gunicorn = "^20.1.0"
flask-mongoengine = "^1.0.0"
Flask-PyMongo = "^2.3.0"

[tool.poetry.dev-dependencies]
coveralls = "^3.3.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
